--- a/website/index.html
+++ b/website/index.html
@@ -1,21 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
     <head>
-        <meta charset="utf-8">
-        <title>Boilerplate</title>        
+        <meta charset="UTF">
+        <title>Odin Recipes</title>
     </head>
-
+    
     <body>
-        <h1>
-            Homepage
-        </h1>
-        <a href="https://www.theodinproject.com/about">
-            Click me
-        </a>
-
-        <a href="./pages/about.html">
-            About page
-        </a>
+        <h1>Odin Recipes</h1>
     </body>
 </html>
