--- a/website/recipes/30minchikdin.html
+++ b/website/recipes/30minchikdin.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="utf-8">
-        <title>Odin's Links and Images</title>
+        <meta charset="utf">
+        <title>30 minutes chicken dinner</title>
     </head>
-
     <body>
         <h1>
-            Aboot page
+            30 minutes chicken dinner
         </h1>
-        <img src="../images/dog.jpg" alt="A black dog with a yellow background">
     </body>
 </html>
