Add image folder and image

--- a/website/index.html
+++ b/website/index.html
@@ -7,5 +7,6 @@
     
     <body>
         <h1>Odin Recipes</h1>
+        <a href="recipes/30minchikdin.html">30 minutes chicken dinner</a>
     </body>
 </html>
