--- a/website/recipes/30minchikdin.html
+++ b/website/recipes/30minchikdin.html
@@ -8,5 +8,9 @@
         <h1>
             30 minutes chicken dinner
         </h1>
+        <img src="../images/chickendin.jpeg" alt="chicken dinner">
+        <ol>
+            <li></li>
+        </ol>
     </body>
 </html>
