Add instruction and ingredients, link to another website

--- a/website/index.html
+++ b/website/index.html
@@ -8,5 +8,6 @@
     <body>
         <h1>Odin Recipes</h1>
         <a href="recipes/30minchikdin.html">30 minutes chicken dinner</a>
+        <h4>More recipes can be found at <a href="https://www.allrecipes.com">here</a></h4>
     </body>
 </html>
