--- a/website/recipes/30minchikdin.html
+++ b/website/recipes/30minchikdin.html
@@ -9,8 +9,29 @@
             30 minutes chicken dinner
         </h1>
         <img src="../images/chickendin.jpeg" alt="chicken dinner">
+        <h5>Ingredients</h5>
+        <ul>
+            <li>¼ cup all-purpose flour for coating</li>
+            <li>½ teaspoon salt</li>
+            <li>¼ teaspoon ground black pepper</li>
+            <li>½ teaspoon dried oregano</li>
+            <li>4 medium skinless, boneless chicken breast halves - pounded 1/4 inch thick</li>
+            <li>4 tablespoons butter</li>
+            <li>4 tablespoons olive oil</li>
+            <li>1 cup sliced mushrooms</li>
+            <li>½ cup Marsala wine</li>
+            <li>¼ cup cooking sherry</li>
+        </ul>
+        <h5>Cooking directions</h5>
         <ol>
-            <li></li>
+            <li>Gather all ingredients</li>
+            <li>In a shallow dish or bowl, mix together the flour, salt, pepper and oregano.</li>
+            <li>Coat chicken pieces in flour mixture</li>
+            <li>In a large skillet, melt butter in oil over medium heat. Place chicken in the pan and lightly brown.</li>
+            <li>Turn over chicken pieces and add mushrooms. Pour in wine and sherry.</li>
+            <li>Cover skillet; simmer chicken 10 minutes, turning once until no longer ppink and juices run clear.</li>
+            <li>Eat.</li>
         </ol>
+        <a href="../index.html">Go back</a>
     </body>
 </html>
