Complete fourth exercise

--- a/02-css-methods.html
+++ b/02-css-methods.html
@@ -8,19 +8,19 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <p class="Pink">
+    <p class="pink">
         I'm a class!
     </p>
     <div id="two">
         I'm one ID.
     </div>
-    <p class="Pink Biggie">
+    <p class="pink biggie">
         I'm a class, but cooler!
     </p>
     <div id="four" class="Biggie">
         I'm another ID.
     </div>
-    <p class="Pink">
+    <p class="pink">
         I'm a class!
     </p>
 </body>
