--- a/flex/landing_page_project/index.html
+++ b/flex/landing_page_project/index.html
@@ -13,14 +13,21 @@
                     Header logo
                 </div>
                 <div>
-
                     <ul class="links">
-                        <li>link one</li>
-                        <li>link two</li>
-                        <li>link three</li>
+                        <li>header link one</li>
+                        <li>header link two</li>
+                        <li>header link three</li>
                     </ul>
                 </div>
             </div>
+            <div class="header">
+                <div class="box">One</div>
+                <div class="box">Two</div>
+            </div>
         </div>
+        <div class="content"></div>
+        <div class="content"></div>
+        <div class="action"></div>
+        <div class="footer"></div>
     </body>
 </html>
