Finish rough layout

--- a/flex/landing_page_project/index.html
+++ b/flex/landing_page_project/index.html
@@ -20,6 +20,7 @@
                     </ul>
                 </div>
             </div>
+            </div>
             <div class="header">
                 <div class="box">One</div>
                 <div class="box">Two</div>
