--- a/flex/landing_page_project/index.html
+++ b/flex/landing_page_project/index.html
@@ -6,9 +6,11 @@
         <link rel="stylesheet" href="style.css">
         <title>Landing page</title>
     </head>
-    <body><div>
+    <body>
+        <!-- Start Hero section -->
         <div class="hero">
-            <div class="header">
+            <!-- Nav Bar -->
+            <div class="nav">
                 <div class="logo">
                     Header logo
                 </div>
@@ -21,14 +23,26 @@
                 </div>
             </div>
             </div>
+            <!-- End Nav -->
             <div class="header">
-                <div class="box">One</div>
-                <div class="box">Two</div>
+                <div class="box">
+                    <h1>This website is awesome</h1>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente deleniti facilis voluptatem quo exercitationem atque, enim, beatae cumque ad, quos iste reprehenderit sequi repudiandae asperiores voluptas doloribus maxime earum quod?
+                </div>
+                <div class="box">Placeholder for image</div>
             </div>
-        </div>
-        <div class="content"></div>
+            <!-- End Hero Section -->
+        <div class="content">
+            <div class="info"><h1>Some random info</h1></div>
+            <div class="cards">
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+            </div>
+            </div>
         <div class="content"></div>
         <div class="action"></div>
-        <div class="footer"></div>
+        <div class="footer">Copyright &copy; The Odin Project 2021</div>
     </body>
 </html>
